--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -15,4 +15,4 @@ jobs:
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
       - name: pylint_lint
-        run: pylint denbi
+        run: pylint wsgi.py denbi
